# it_factory_test

./: .env  .env.dev  README.md  docker-compose.dev.yml  pyproject.toml
app/: Dockerfile  default_data.json  entrypoint.sh
app/shop/: admin.py  apps.py  models.py  views.py
app/shop/api/v1/: serializers.py  urls.py  views.py
app/shop/migrations/: 0001_initial.py  0002_alter_visit_visit_date.py
app/shop/templates/: main.html
app/shop/tests/: test_api.py  test_model.py
app/src/: urls.py  yasg.py
app/src/settings/components/: base.py  rest_settings.py
